Restructuring + Removing Auth Token - long overdue refactoring classes into separate files - Discord doesn't like when your auth token is public, from now on kept off github repository

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 { 
-  "token"  : "NzAxMTMzODg0NjYxODI1NjUw.Xp83yQ.3PFH7hg2BN05yxlZOLPZom11HZ8",
+  "token"  : "Discord Authentication Token Goes Here",
   "prefix" : "!"
 }
