Arrange Scoreboard Printout In Descending Order

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 { 
-  "token"  : "Discord Authentication Token Goes Here",
+  "token"  : "NzAxMTMzODg0NjYxODI1NjUw.Xr86Qw.tL3DxgvVDK0hgwK_qWOac_pQhk4",
   "prefix" : "!"
 }
