--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "daemonize-process": "^3.0.0",
     "discord.js": "^12.2.0"
   },
   "devDependencies": {},
